Context, GenericClass, UnitOfWork, filters & CRUD

--- a/back_punto_venta/punto_venta.API/appsettings.Development.json
+++ b/back_punto_venta/punto_venta.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbPuntoVentaConection": "Data Sourse=NIGHTBIRD-S-DES\\LUCAS;Database=DB_punto_venta;Integrated Security=true"
   }
 }
