--- a/back_punto_venta/punto_venta.API/appsettings.json
+++ b/back_punto_venta/punto_venta.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbPuntoVentaConection": "Data Sourse=NIGHTBIRD-S-DES\\LUCAS;Database=DB_punto_venta;Integrated Security=true"
+  }
 }
